templates/Resource&limit_requests.yaml
---
apiVersion: v1
kind: Pod

metadata:
  name: insta-pod-rr
  labels:
    env: production 
    app: instagram 

spec:
  containers:
    - name: insta-pod-cont
      image: devopshubg333/batch16d:fb_httpd
      ports:
        - containerPort: 80
    
      resources:
        requests:
          cpu: "200m"     # needs at least 0.2 of a CPU core
          memory: "256Mi" # needs at least 256 MB of RAM
        limits:
          cpu: "500m"     # can use up to 0.5 CPU core
          memory: "512Mi" # can use up to 512 MB of RAMresources:
