templates/kindex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kindex
  labels:
    app: kia
    env: orun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia
      env: orun
  template:
    metadata:
      name: kindex
      labels:
        app: kia
        env: orun
    spec:
      containers:
        - name: kindex-test
          image: httpd
          ports:
            - containerPort: 80
