templates/livenessprobe-tcp-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-liveness-pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
    livenessProbe:
      tcpSocket:
        port: 4406                   # Check if TCP connection to port 3306 is open
      initialDelaySeconds: 10        # Wait 10 seconds before first check
      periodSeconds: 10             # Check every 20 seconds
      failureThreshold: 2            # Restart container after 3 failed checks
