templates/livenessprobe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
   
    livenessProbe:
      httpGet:
        path: /
        port: 8082
      initialDelaySeconds: 5
      periodSeconds: 10
      failureThreshold: 3


      ## kubectl exec -it liveness-pod -- curl localhost:80
