templates/startupprobe-sql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-liveness-pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
    startupProbe:
      exec:
        command:
        - sh
        - -c
        - "mysqladmin ping -h 127.1.2.1 -u root -prootpassword"
      initialDelaySeconds: 10        # Wait 10s before the first check
      periodSeconds: 10              # Check every 10s
      failureThreshold: 30          # wait up to 30 failed health checks, allow up to 5 minutes (30 * 10s) for startup

    # --- LIVENESS PROBE ---
    livenessProbe:
      tcpSocket:
        port: 3306                   # Check if TCP connection to port 3306 is open
      initialDelaySeconds: 10
      periodSeconds: 20
      failureThreshold: 3

    # --- READINESS PROBE ---
    readinessProbe:
      exec:
        command:
        - sh
        - -c
        - "mysqladmin ping -h 127.0.0.1 -u root -prootpassword"
      initialDelaySeconds: 15
      periodSeconds: 10
      failureThreshold: 3

  restartPolicy: Always
