templates/startupprobe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80

    # --- STARTUP PROBE ---
    startupProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5     # Wait 5s before first check
      periodSeconds: 10          # Check every 10s
      failureThreshold: 30       # Allow up to 5 minutes (30 * 10s) for Nginx to start
  # --- LIVENESS PROBE ---
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
      failureThreshold: 3
