templates/ebs_static.yml
---
apiVersion: v1
kind: Pod

metadata:
  name: kindex-pod
  labels:
    app: facebook 
spec:

  nodeSelector:
   topology.kubernetes.io/zone: us-east-1b

  containers:
    - name: facebook-pod-cont
      image: devopshubg333/batch16d:fb_httpd
      ports:
        - containerPort: 80

      volumeMounts: # docker run -v hostpath:contaierpath
      - name: ebs-static
        mountPath: /var/www/html
  volumes:
    - name: ebs-static
      persistentVolumeClaim:
       claimName: ebs-static   

---
apiVersion: v1
kind: Service
metadata:
   name: fb-lb-svc
   labels:
     app: facebook 

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP

  selector:
        app: facebook
