templates/kindex-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: kindex-svc
  labels:
    app: rist
    prod: jest
spec:
  type: NodePort
  selector:
    app: kia
    env: orun
  ports:
    - port: 80
      targetPort: 80
